--- a/src/features/LeaderCard/style.css
+++ b/src/features/LeaderCard/style.css
@@ -4,7 +4,7 @@
     border-radius: 35px;
     overflow: hidden;
     background: linear-gradient(to bottom, rgba(0,0,0,0) 20vh, rgba(193, 48, 0, 0.5)), url("/mock/leader.jpg");
-    width: min(550px, 80vw);
+    width: min(550px, 90vw);
     height: min(630px, 60vh);
     display: flex;
     flex-direction: column;
